// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionEditor > should render QuestionEditor for classic mode 1`] = `
<div>
  <div
    class="questionEditor"
  >
    <div
      class="inputContainer"
    >
      <div
        class="textareaInputContainer error code"
      >
        <textarea
          data-testid="test-quiz-question-editor-textarea-textarea"
          id="quiz-question-editor-textarea"
          name="quiz-question-editor-textarea"
          placeholder="Questions"
        >
          [
  {
    "type": "MULTI_CHOICE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "options": [
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      }
    ],
    "points": 1000,
    "duration": 30
  },
  {
    "type": "RANGE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "min": 0,
    "max": 100,
    "margin": "MEDIUM",
    "correct": 50,
    "points": 1000,
    "duration": 30
  },
  {
    "type": "TRUE_FALSE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "correct": true,
    "points": 1000,
    "duration": 30
  },
  {
    "type": "TYPE_ANSWER",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "options": [
      ""
    ],
    "points": 1000,
    "duration": 30
  }
]
        </textarea>
      </div>
      <div
        class="errorContainer"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation "
          data-icon="triangle-exclamation"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
            fill="currentColor"
          />
        </svg>
         
        Invalid length for field '[0].question'. Expected a length at least 3, got 0.
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionEditor > should render QuestionEditor for zero to one hundred mode 1`] = `
<div>
  <div
    class="questionEditor"
  >
    <div
      class="inputContainer"
    >
      <div
        class="textareaInputContainer error code"
      >
        <textarea
          data-testid="test-quiz-question-editor-textarea-textarea"
          id="quiz-question-editor-textarea"
          name="quiz-question-editor-textarea"
          placeholder="Questions"
        >
          [
  {
    "type": "RANGE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "correct": 50,
    "duration": 30
  }
]
        </textarea>
      </div>
      <div
        class="errorContainer"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation "
          data-icon="triangle-exclamation"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
            fill="currentColor"
          />
        </svg>
         
        Invalid length for field '[0].question'. Expected a length at least 3, got 0.
      </div>
    </div>
  </div>
</div>
`;
